fix: layout issue with wide location block

--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,20 @@
 .App {
-  text-align: center;
+  background-color: #FFFCF2;
 }
 
 .App-header {
-  background-color: #FFFCF2;
   min-height: 80vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #403D39;
+  display: grid;
+  grid-template-columns: 1em auto 1em;
+  grid-template-areas: "left-gap main right-gap";
+  justify-content: center;
+  align-content: center;
 }
 
 .App-footer {
   min-height: 20vh;
-  background-color: #FFFCF2;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,16 +42,25 @@
   color: #CCC5B9;
 }
 
+.App-locations-container {
+  grid-area: main;
+  height: 100%;
+}
 .App-location {
   text-align: left;
-  min-width: 350px;
   line-height: 1.625em;
+  min-width: 400px;
 }
 .App-location .App-location--close {
   visibility: hidden;
 }
 .App-location:hover .App-location--close {
   visibility: visible;
+}
+
+.App-location-input {
+  width: 100%;
+  text-align: left;
 }
 
 .App-time {
